--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,15 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AEC Audio Stream</title>
-  <!-- Prevent 404 on favicon.ico by providing a favicon in root or using a data-URI -->
-  <link rel="icon" href="favicon.ico">
-</head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>레스토랑 실용 회화 연습</title>
+  <link rel="icon" href="data:image/x-icon;base64,
+      AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAGAAAAAAAQAEAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+      AAAAAAAA////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A" />
+        <style>
+            /* Make all buttons big & tappable */
+            button {
+            font-size: 1rem;         /* larger text */
+            padding: 0.5rem 2.5rem;        /* more click area */
+            border-radius: 0.5rem;     /* rounded corners */
+            cursor: pointer;
+            /* optional: match your design system */
+            background: #007bff;
+            color: white;
+            border: none;
+            }
+            button:disabled {
+            background: #aaa;
+            cursor: not-allowed;
+            }
+        </style>
+    </head>
 <body>
-  <h1>AEC Audio Capture &amp; Stream</h1>
-  <button id="start">Start Streaming</button>
+  <h1>레스토랑 실용 회화 연습</h1>
+  <button id="start">시작</button>
+  <button id="stop" disabled>중지</button>
+  <audio id="remoteAudio" autoplay></audio>
   <script src="app.js"></script>
 </body>
 </html>
