changed the prompt

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>레스토랑 실용 회화 연습</title>
+  <title>공항 체크인 실용 회화 연습</title>
   <link rel="icon" href="data:image/x-icon;base64,
       AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAGAAAAAAAQAEAAAAAAAAAAAAAAAAAAAAAAAAAAAA
       AAAAAAAA////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A" />
@@ -26,7 +26,7 @@
         </style>
     </head>
 <body>
-  <h1>레스토랑 실용 회화 연습</h1>
+  <h1>공항 체크인 실용 회화 연습</h1>
   <button id="start">시작</button>
   <button id="stop" disabled>중지</button>
   <audio id="remoteAudio" autoplay></audio>
